--- a/2022/p1214_2.md
+++ b/2022/p1214_2.md
@@ -1,4 +1,8 @@
+% Markdown to HTML (pandoc)
+
 # pandocによるMarkdownからHTMLの生成
+
+シンプルなHTMLを生成。
 
 ```sh
 sudo apt update
@@ -6,6 +10,5 @@ sudo apt install pandoc
 pandoc index.md -o index.html
 ```
 
-シンプルなHTMLを生成。
 
 [ホームへ](https://harunachan.com/)
