--- a/2022/p1215.md
+++ b/2022/p1215.md
@@ -1,6 +1,6 @@
 % Haruna-chan Blog
 
-# pandocとHTMLテンプレート
+# pandocでHTMLテンプレートを使用
 
 ディレクトリ確認
 
@@ -11,7 +11,7 @@ pandoc -v
 HTMLテンプレートを置く場所
 
 ```sh
-~/.pandoc/templates/md2thml.html
+~/.pandoc/templates/md2html.html
 ```
 実行コマンド例
 
