--- a/2022/p1214.md
+++ b/2022/p1214.md
@@ -1,8 +1,8 @@
-% Markdown to HTML (Markdown PDF)
+% Haruna-chan Blog
 
 # MarkdownをHTMLに変換
 
-VSCodeの拡張機能でMarkdownをHTMLに変換する。
+VSCodeの拡張機能でMarkdownをHTMLに変換。
 
 1. VSCodeを起動
 2. 拡張機能「Markdown PDF」をインストール
