--- a/2022/p1214.md
+++ b/2022/p1214.md
@@ -11,6 +11,10 @@ VSCodeの拡張機能でMarkdownをHTMLに変換。
 5. 「Markdown PDF: Export (HTML)」を選択
 6. HTMLが生成される
 
+# 参考記事
+
 [参考記事](https://atmarkit.itmedia.co.jp/ait/articles/1804/27/news034.html)
+
+# ホームへ
 
 [ホームへ](https://harunachan.com/)
