--- a/2022/p1215.md
+++ b/2022/p1215.md
@@ -19,8 +19,12 @@ HTMLテンプレートを置く場所
 pandoc -f markdown -t html --template=md2html index.md > index.html
 ```
 
+# 参考記事
+
 - [pandoc参考資料](https://qiita.com/cawpea/items/cea1243e106ababd15e7)
 - [pandoc template](https://github.com/cawpea/md2html-template-for-pandoc)
+
+# ホームへ
 
 [ホームへ](https://harunachan.com)
 
