--- a/2022/p1216.md
+++ b/2022/p1216.md
@@ -26,6 +26,12 @@ for i in range(999):
   p=h
 print((a+b)**2/(D(4)*t))" | cowsay | textimg -s
 ```
+
+# 出力画像
+
 ![](./p1216.png)
 
+# ホームへ
+
 [ホームへ](https://harunachan.com/)
+
