--- a/2022/p1216_2.md
+++ b/2022/p1216_2.md
@@ -8,7 +8,11 @@ cssは必ずパスを指定。
 pandoc -f markdown -c ./../theme.css -t html --template=template.html5 p1216.md > p1216.html
 ```
 
+# 参考記事
+
 - [HTMLテンプレートとcss](https://jez.io/pandoc-markdown-css-theme/)
 - [参考記事](https://oita.oika.me/2020/11/23/markdown-to-html/)
+
+# ホームへ
 
 [ホームへ](https://harunachan.com/)
