--- a/2022/p1216_3.md
+++ b/2022/p1216_3.md
@@ -14,10 +14,10 @@ make
 make clean
 ```
 
-Makefileの内容。
+# Makefileの内容
 
 
-```
+```sh
 SOURCES := $(shell find ./ -type f -name '*.md')
 TARGETS := $(patsubst %.md,%.html,$(SOURCES))
 
@@ -33,8 +33,12 @@ clean:
 	rm -f ./2022/*.html
 ```
 
+# 参考記事
+
 - [参考情報1](https://github.com/jez/pandoc-markdown-css-theme/blob/master/Makefile)
 - [参考情報2](https://gist.github.com/bertvv/e77e3a5d24d8c2a9bcc4)
+
+# ホームへ
 
 [ホームへ](https://harunachan.com/)
 
