--- a/2022/p1216_4.md
+++ b/2022/p1216_4.md
@@ -34,9 +34,9 @@ function draw() {
   offset += 0.1;
 }
 ```
-# HTML
+## HTML
 
-```html
+```HTML
 <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
 ```
 
