--- a/2022/p1216_4.md
+++ b/2022/p1216_4.md
@@ -36,9 +36,9 @@ function draw() {
 ```
 ## HTML
 
-```HTML
-<script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
-```
+公式サイトからHTML拝借。
+
+[p5.js](https://p5js.org/get-started/)
 
 # 作品ページ
 
