--- a/2022/p1217_2.md
+++ b/2022/p1217_2.md
@@ -18,4 +18,4 @@ convert -size 283x283 xc:#FF0000 b.png; for i in {0..8}; do convert -size 200x20
 
 # ホームへ
 
-[ホームへ](https://haruachan.com/)
+[ホームへ](https://harunachan.com/)
