--- a/diary/p202212.md
+++ b/diary/p202212.md
@@ -2,6 +2,21 @@
 
 # 2022年12月
 
+## 20日
+
+- アルバイト
+- クリスマスプレゼント到着（シュレッダー）
+
+## 19日
+
+- 病院
+- ブルーバックスの科学手帳を購入
+- クリスマスプレゼント到着（ノート）
+
+## 18日
+
+- 副反応
+
 ## 17日
 
 - 副反応
