--- a/diary/p202212.md
+++ b/diary/p202212.md
@@ -2,6 +2,27 @@
 
 # 2022年12月
 
+## 25日
+
+- 部屋大掃除
+
+## 24日
+
+- LINEスタンプ交換
+
+## 23日
+
+- シェル芸の非公式WIKI
+
+## 22日
+
+- アルバイト
+
+## 21日
+
+- 図書館
+- マルクス・ガブリエル
+
 ## 20日
 
 - アルバイト
