update from new pc

--- a/diary/p202212.md
+++ b/diary/p202212.md
@@ -2,6 +2,31 @@
 
 # 2022年12月
 
+## 31日
+
+- すき焼き
+- パソコン修理完了
+
+## 30日
+
+- シェル芸AtCoder記事を執筆
+
+## 29日
+
+- 二次創作
+
+## 28日
+
+- 似顔絵
+
+## 27日
+
+- 今年最後のアルバイト
+
+## 26日
+
+- パソコン修理
+
 ## 25日
 
 - 部屋大掃除
