--- a/diary/p202301.md
+++ b/diary/p202301.md
@@ -2,6 +2,32 @@
 
 # 2023年1月
 
+## 7日
+
+- にじさんじ麻雀杯
+- Qiita : 競プロシェル芸記事
+
+## 6日
+
+- 病院
+- マルクス・ガブリエル
+
+## 5日
+
+- アルバイト
+
+## 4日
+
+- AWS Amplifyでウェブアプリ作成
+
+## 3日
+
+- AWS Amplifyの勉強
+
+## 2日
+
+- AWS Amplifyの勉強
+
 ## 1日
 
 - 新年
