--- a/diary/p202301.md
+++ b/diary/p202301.md
@@ -2,6 +2,52 @@
 
 # 2023年1月
 
+## 17日
+
+- アルバイト
+
+## 16日
+
+- Zenn第2章
+
+## 15日
+
+- Zenn第1章
+
+## 14日
+
+- FGO
+- Sky
+
+## 13日
+
+- 手紙を投函
+- 図書館
+- 病院なし
+
+## 12日
+
+- アルバイト
+- スペース
+
+## 11日
+
+- アルバイト
+- Twitter Blue
+
+## 10日
+
+- アルバイト
+
+## 9日
+
+- 仲直り
+- 年賀状大喜利
+
+## 8日
+
+- マラソン
+
 ## 7日
 
 - にじさんじ麻雀杯
