--- a/diary/p202301.md
+++ b/diary/p202301.md
@@ -2,6 +2,64 @@
 
 # 2023年1月
 
+## 31日
+
+- アルバイト
+- 色々と記録は残すように
+
+## 30日
+
+- メルさんの写真整理
+
+## 29日
+
+- メルさんの写真整理
+
+## 28日
+
+- メルさんの写真整理
+
+## 27日
+
+- メルさんの火葬
+
+## 26日
+
+- メルさんの命日
+
+## 25日
+
+- アルバイト
+
+## 24日
+
+- ブログ整理
+
+## 23日
+
+- 手紙
+- 刺繍
+
+## 22日
+
+- ブログ
+
+## 21日
+
+- 虚構推理
+
+## 20日
+
+- 2000円男の話
+
+## 19日
+
+- アルバイト
+
+## 18日
+
+- アルバイト
+
 ## 17日
 
 - アルバイト
