--- a/diary/p202302.md
+++ b/diary/p202302.md
@@ -2,6 +2,42 @@
 
 # 2023年2月
 
+## 28日
+
+- 就活準備
+
+## 27日
+
+- 宝石の国99話まで
+
+## 26日
+
+- シェル芸勉強会のブログ記事
+
+## 25日
+
+- シェル芸勉強会63
+
+## 24日
+
+- 病院
+
+## 23日
+
+- アルバイト
+
+## 22日
+
+- アルバイト
+
+## 21日
+
+- アルバイト
+
+## 20日
+
+- 次の旅行予定計画
+
 ## 19日
 
 - 福岡旅行
